--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,31 @@
 services:
-  database_ignite:
-    image: postgres
+  rentalx-pg-db:
+    image: bitnami/postgresql
     container_name: database_ignite
     restart: always
     ports:
       - 5432:5432
     environment:
-      - POSTGRES_USER=docker
-      - POSTGRES_PASSWORD=ignite
-      - POSTGRES_DB=rentx
+      - POSTGRESQL_USERNAME=docker
+      - POSTGRESQL_PASSWORD=ignite
+      - POSTGRESQL_DATABASE=rentx
     volumes:
       - pgdata:/data/postgres
     network_mode: host
   app:
     build: .
-    container_name: rentx
     ports:
       - 3333:3333
     volumes:
-      - .:/usr/app
+      - .:/home/node/app
+    extra_hosts:
+      - "host.docker.internal:172.17.0.1"
     network_mode: host
-
 
 volumes:
   pgdata:
     driver: local
+
+# networks:
+#   my-network:
+#     external: true
