--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
+    "typeorm:migration:create": "ts-node-dev ./node_modules/typeorm/cli migration:create",
+    "typeorm:migration:run": "typeorm migration:run"
   },
   "dependencies": {
     "@types/multer": "^1.4.7",
@@ -15,7 +17,7 @@
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.5.0",
-    "typeorm": "^0.3.9",
+    "typeorm": "^0.2.31",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
