--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/multer": "^1.4.7",
+    "bcryptjs": "^2.4.3",
     "csv-parse": "^5.3.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.1",
@@ -23,6 +24,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
