--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "csv-parse": "^5.3.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^9.0.1",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
