--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "csv-parse": "^5.3.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.1",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.8.0",
