--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn --poll src/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
-    "typeorm:migration:create": "ts-node-dev ./node_modules/typeorm/cli migration:create",
+    "typeorm:migration:create": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli migration:create",
     "typeorm:migration:run": "typeorm migration:run",
     "test": "jest"
   },
@@ -46,6 +46,7 @@
     "prettier": "^2.7.1",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^4.8.3"
   }
 }
