--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/multer": "^1.4.7",
     "bcryptjs": "^2.4.3",
     "csv-parse": "^5.3.0",
+    "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
