feat: Implemente functionality to create a rental.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
     "Comparation",
     "dayjs",
     "dtos",
+    "middlewares",
+    "postgres",
+    "rentx",
     "tsyringe",
     "typeorm"
   ]
