--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "seed:admin": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts"
   },
   "dependencies": {
+    "@types/supertest": "^2.0.12",
     "@types/multer": "^1.4.7",
     "bcryptjs": "^2.4.3",
     "csv-parse": "^5.3.0",
@@ -47,6 +48,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.6.1",
     "prettier": "^2.7.1",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
