--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
     "typeorm:migration:create": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli migration:create",
     "typeorm:migration:run": "typeorm migration:run",
-    "test": "jest",
+    "test": "NODE_ENV=test jest",
     "test:watch": "jest --watch",
     "seed:admin": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts"
   },
