--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "seed:admin": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts"
   },
   "dependencies": {
-    "@types/supertest": "^2.0.12",
     "@types/multer": "^1.4.7",
+    "@types/supertest": "^2.0.12",
     "bcryptjs": "^2.4.3",
     "csv-parse": "^5.3.0",
     "dayjs": "^1.11.9",
@@ -23,6 +23,7 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.4",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.5.0",
