--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "seed:admin": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts"
   },
   "dependencies": {
+    "@jest/globals": "^29.6.2",
     "@types/multer": "^1.4.7",
     "@types/supertest": "^2.0.12",
     "bcryptjs": "^2.4.3",
@@ -22,6 +23,7 @@
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.8",
+    "jest": "^29.6.2",
     "jsonwebtoken": "^9.0.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
@@ -49,7 +51,6 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-import-helpers": "^1.2.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.6.1",
     "prettier": "^2.7.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
