--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@jest/globals": "^29.6.2",
     "@types/multer": "^1.4.7",
     "@types/supertest": "^2.0.12",
+    "aws-sdk": "^2.1427.0",
     "bcryptjs": "^2.4.3",
     "csv-parse": "^5.3.0",
     "dayjs": "^1.11.9",
