--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "handlebars": "^4.7.8",
     "jest": "^29.6.2",
     "jsonwebtoken": "^9.0.1",
+    "mime": "^3.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
     "pg": "^8.8.0",
@@ -40,6 +41,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^29.5.3",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/mime": "^3.0.1",
     "@types/nodemailer": "^6.4.9",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
