--- a/ormconfig.example.json
+++ b/ormconfig.example.json
@@ -5,9 +5,7 @@
   "username": "docker",
   "password": "ignite",
   "database": "rentx",
-  "migrations": [
-    "./src/shared/infra/typeorm/migrations/*.ts"
-  ],
+  "migrations": ["./src/shared/infra/typeorm/migrations/*.ts"],
   "cli": {
     "migrationsDir": "./src/shared/infra/typeorm/migrations"
   },
