--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
     "pg": "^8.8.0",
+    "rate-limiter-flexible": "^2.4.2",
+    "redis": "^4.6.7",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.5.0",
     "tsyringe": "^4.8.0",
