--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@jest/globals": "^29.6.2",
+    "@sentry/node": "^7.61.1",
     "@types/multer": "^1.4.7",
     "@types/supertest": "^2.0.12",
     "aws-sdk": "^2.1427.0",
